# oop_exercise_08

./: .travis.yml  CMakeLists.txt  README.md  factory.cpp  factory.h  figure.h  main.cpp  main.cpp.txt  octagon.cpp  octagon.h  point.cpp  point.h  processor.cpp  processor.h  quadrate.cpp  quadrate.h  report.doc  subscriber.cpp  subscriber.h  triangle.cpp  triangle.h  ~$report.doc  ~WRL0001.tmp
test/: CMakeLists.txt  test.cpp
tests/: test_00.result  test_00.test  test_01.result  test_01.test
